<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abhirawat.yourfamily.CreateAccountActivity">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/header_color">

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/backArrow"
            android:textColor="@color/white"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="@dimen/header_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:padding="@dimen/margin_10">

        <LinearLayout
            android:id="@+id/linearForGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_10">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageMale"
                android:layout_width="@dimen/width_50"
                android:layout_height="@dimen/width_50"
                android:layout_marginBottom="@dimen/margin_10"
                android:clickable="true"
                android:src="@drawable/male" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageFeMale"
                android:layout_width="@dimen/width_50"
                android:layout_height="@dimen/width_50"
                android:layout_marginTop="@dimen/margin_10"
                android:clickable="true"
                android:src="@drawable/female" />
        </LinearLayout>

        <EditText
            android:id="@+id/edituserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearForGender"
            android:layout_margin="@dimen/padding_10"
            android:background="@drawable/login_input"
            android:hint="@string/username"
            android:padding="@dimen/input_padding" />

        <EditText
            android:id="@+id/editMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edituserName"
            android:layout_margin="@dimen/padding_10"
            android:background="@drawable/login_input"
            android:hint="@string/contact_or_mobile_no"
            android:padding="@dimen/input_padding" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editMobile"
            android:layout_margin="@dimen/padding_10"
            android:background="@drawable/login_input"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/input_padding" />

        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editPassword"
            android:layout_margin="@dimen/padding_10"
            android:background="@drawable/login_input"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/input_padding" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_50"
            android:layout_below="@+id/editConfirmPassword"
            android:layout_marginTop="@dimen/padding_10"
            android:background="@drawable/custom_border"
            android:text="@string/Confirm"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>
