<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    tools:context="com.example.abhirawat.yourfamily.LoginActivity">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/margin_from_header"
        android:padding="@dimen/padding_10">

        <EditText
            android:id="@+id/tviewUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_50"
            android:background="@drawable/login_input"
            android:hint="@string/username"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/tviewPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_50"
            android:layout_below="@+id/tviewUsername"
            android:layout_marginTop="@dimen/padding_10"
            android:background="@drawable/login_input"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_50"
            android:layout_below="@+id/tviewPassword"
            android:layout_marginTop="@dimen/padding_10"
            android:background="@drawable/custom_border"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_50"
            android:layout_below="@+id/btnlogin"
            android:layout_marginTop="@dimen/padding_10"
            android:background="@drawable/custom_border"
            android:text="@string/createAccount"
            android:textColor="@color/white" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tviewdata"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@color/header_color"
        android:textColor="@color/white" />
</RelativeLayout>
