<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abhirawat.yourfamily.AboutActivity">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/header_color">

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:onClick="Back"
            android:text="@string/backArrow"
            android:textColor="@color/white"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/about_us"
            android:textColor="@color/white"
            android:textSize="@dimen/header_text_size" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewAbout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl1"
        android:layout_margin="@dimen/margin_10">

        <ScrollView
            android:id="@+id/Scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10"
                android:text="@string/About_Us" />

        </ScrollView>
    </android.support.v7.widget.CardView>
</RelativeLayout>
